static/style.css
body { 
    background: black;
    color: white;
    font-family: sans-serif;
}
.songs {
    -moz-column-width:205px;
    -webkit-column-width:205px;
}
.songs button {
    display: inline-block;
    width: 200px;
    height: 50px;
    text-align: left;
    background: black;
    color: white;
    margin: 2px;
font-size: 115%;
}
.songs button:hover {
    color: black;
    background: yellow;
}
body { 
    background: black;
    color: white;
    font-style: sans-serif;
}
.commands button {
    background: black;
    color: white;
    padding: 20px
}
.commands button.active {
    background: red;
}

.songs button:hover {
    color: black;
    background: yellow;
}
.commands button {
    background: black;
    color: white;
    padding: 20px
}
.commands button.active {
    background: #1C4054;
}
.key {
    color: #888;
}
.currentSong button {
    background: #55A5C9;
}
.timeRow {
    margin: 14px;
}

